--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,83 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #dadada;
   font-size: 10px;
+}
+
+.container {
+  width: 100%;
+}
+
+.baku {
+  background-image: url(../images/baku.jpg);
+  background-size: cover;
+}
+
+.london {
+  background-image: url(../images/london.png);
+  background-size: cover;
+}
+
+.madrid {
+  background-image: url(../images/madrid.jpg);
+  background-size: cover;
+}
+
+.rome {
+  background-image: url(../images/rome.jpg);
+  background-size: cover;
+}
+
+.preview {
+  width: 100%;
+  height: 250px;
+  margin: 10px 0px;
+}
+
+div {
+  background-color: #dadada;
+  float: left;
+  margin: 1% 0;
+  width: 100%;
+  padding: 20px 25px;
+}
+
+h1, h3 {
+  font-size: 2em;
+  margin: 0;
+}
+
+.title {
+  text-transform: uppercase;
+  font-family: sans-serif;
+  text-align: center;
+}
+
+h3 {
+  font-size: 1.8em;
+  font-weight: 300;
+}
+
+@media screen and (min-width: 575px){
+   .preview {
+    margin: 1%;
+    width: 48%;
+  }
+
+  .container {
+    margin: 0px auto;
+    width: 90%;
+    max-width: 80%;
+  }
+}
+
+@media screen and (min-width: 1199px){
+   .preview {
+    margin: 1%;
+    width: 23%;
+  }
+
 }
